@@ -3,7 +3,6 @@ package io.github.pulsebeat02.murderrun.json.adapters;
 import com.google.gson.*;
 import java.lang.reflect.Type;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public final class PathAdapter implements JsonDeserializer<Path>, JsonSerializer<Path> {
 
@@ -13,12 +12,14 @@ public final class PathAdapter implements JsonDeserializer<Path>, JsonSerializer
       final Type type,
       final JsonDeserializationContext jsonDeserializationContext)
       throws JsonParseException {
-    return Paths.get(jsonElement.getAsString());
+    final String path = jsonElement.getAsString();
+    return Path.of(path);
   }
 
   @Override
   public JsonElement serialize(
       final Path path, final Type type, final JsonSerializationContext jsonSerializationContext) {
-    return new JsonPrimitive(path.toString());
+    final String pathString = path.toString();
+    return new JsonPrimitive(pathString);
   }
 }
